Add migrations for ingredients and custom meals, update product backref
- Created migration to add 'ingredient', 'custom_meal', and 'custom_meal_ingredient' tables.
- Altered existing tables to accommodate new fields and relationships.
- Updated foreign key constraints and adjusted column types for better data integrity.
- Added migration to create 'ad' table with references to 'product' and 'store'.
- Implemented downgrade functions to revert changes if necessary.

--- a/application/templates/adminlayout.html
+++ b/application/templates/adminlayout.html
@@ -174,12 +174,20 @@
                 <span>Analytics</span>
             </a>
         </li>
+
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('store.products') }}">
                 <i class="fas fa-th-list"></i>
                 <span>View Products</span>
             </a>
         </li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('store.manage_ingredients') }}">
+                🧂 Ingredients
+            </a>
+        </li>
+
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('store.addproducts') }}">
                 <i class="fas fa-plus-circle"></i>
