--- a/application/templates/customer/restuarants.html
+++ b/application/templates/customer/restuarants.html
@@ -21,7 +21,7 @@
                         </p>
 
                         <div class="mt-auto d-flex justify-content-between align-items-center">
-                            <a href="{{ url_for('main.details', store_id=store.id) }}" 
+                            <a href="{{ url_for('main.store_details', store_id=store.id) }}" 
                                class="btn btn-outline-success btn-sm rounded-pill px-3">
                                 View Details
                             </a>
